# python-tesla-fleet-api

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  createPb2.sh  createProto.sh  keytool.py  pyproject.toml  requirements.txt  setup.py  upgradeProtoc.sh
.github/workflows/: ci.yml  python-publish.yml
docs/: bluetooth_vehicles.md  energy_local_control.md  fleet_api_energy_sites.md  fleet_api_signed_commands.md  fleet_api_vehicles.md  teslemetry.md  tessie.md
proto/: car_server.proto  common.proto  managed_charging.proto  session.proto  teslapower.proto  universal_message.proto  vcsec.proto  vehicle.proto
tesla-fleet-api/: TeslaFleetApi.py  TeslaFleetOAuth.py  Teslemetry.py  __init__.py  const.py  exceptions.py
tesla_fleet_api/: TeslaFleetApi.py  TeslaFleetOAuth.py  Teslemetry.py  __init__.py  charging.py  const.py  energy.py  energyspecific.py  exceptions.py  partner.py  ratecalculator.py  tariff.py  teslafleetapi.py  teslafleetoauth.py  teslafleetopensource.py  teslemetry.py  tessie.py  user.py  util.py  vehicle.py  vehiclesigned.py  vehiclespecific.py
tesla_fleet_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tesla_fleet_api/pb2/: __init__.pyi  car_server_pb2.py  car_server_pb2.pyi  common_pb2.py  errors_pb2.py  errors_pb2.pyi  keys_pb2.py  keys_pb2.pyi  managed_charging_pb2.py  managed_charging_pb2.pyi  signatures_pb2.py  universal_message_pb2.py  vcsec_pb2.py  vehicle_pb2.py
tesla_fleet_api/router/: __init__.py  base.py  energysite.py  vehicle.py
tesla_fleet_api/tesla/: __init__.py  bluetooth.py  charging.py  energysite.py  fleet.py  oauth.py  partner.py  router.py  tesla.py  user.py
tesla_fleet_api/tesla/vehicle/: __init__.py  bluetooth.py  broadcast.py  commands.py  fleet.py  router.py  signed.py  vehicle.py  vehicles.py
tesla_fleet_api/tesla/vehicle/proto/: __init__.py  __init__.pyi  car_server_pb2.py  car_server_pb2.pyi  (+18 more)
tesla_fleet_api/teslemetry/: __init__.py  energysite.py  teslemetry.py  vehicle.py  vehicles.py
tesla_fleet_api/tessie/: __init__.py  tessie.py  vehicle.py  vehicles.py
tests/: ble_mocked_transport.py  test_auto_seat_climate.py  test_ble_broadcast_confirmation.py  test_ble_broadcast_listeners.py  test_ble_charging_commands.py  test_ble_charging_utility_commands.py  test_ble_climate_commands.py  test_ble_command_verification.py  test_ble_confirmation_mode.py  test_ble_connectivity_diagnostics_commands.py  test_ble_destructive_commands.py  test_ble_expects_data.py  test_ble_keepalive.py  test_ble_message_routing.py  test_ble_mocked_closures_locks.py  test_ble_mocked_commands.py  test_ble_mocked_media_commands.py  test_ble_mocked_state_readers.py  test_ble_mocked_state_readers_new.py  test_ble_nav_messaging_media_commands.py  test_ble_nav_misc_commands.py  test_ble_niche_commands.py  test_ble_optimistic_and_best_effort.py  test_ble_pair.py  test_ble_reassembling_buffer.py  test_ble_send_transport.py  test_ble_stream_sink.py  test_ble_ui_unit_preference_commands.py  test_ble_unconfirmed_command.py  test_ble_write_timeout_router.py  test_command_counter_lock.py  test_command_logging.py  test_cross_transport_parity.py  test_energysite_island_mode.py  test_find_vehicle_scan_filter.py  test_firmware_at_least.py  test_fleet_auth_refresh.py  test_power_mode_commands.py  test_proto_compatibility.py  test_proto_coverage_lock.py  (+9 more)
tests/fixtures/: tariff_moorinya_v2.json
tools/: regenerate_protos.sh
